--- a/roles/haproxy-config/templates/midonet_cluster.j2
+++ b/roles/haproxy-config/templates/midonet_cluster.j2
@@ -12,6 +12,6 @@ backend midonet_cluster-back
     option forwardfor
     option httpchk /
     option httplog
-{% for host_name in [groups['midonet-cluster'] %}
+{% for host_name in groups['midonet-cluster'] %}
     server {{ host_name }} {{ hostvars[host_name]['ansible_ssh_host'] }}:8181 check inter 5000 inter 12000 rise 3 fall 3
 {% endfor %}
